# lidar-object-detection

./: .gitignore  CMakeLists.txt  README.md  my_readme.txt
src/: environment.cpp  euclidean_clusterer.h  euclidean_clusterer.hpp  kdtree.h  point_cloud_processor.h  point_cloud_processor.hpp  processPointClouds.cpp  processPointClouds.h
src/render/: box.h  render.cpp  render.h
src/sensors/: lidar.h
